--- a/index.html
+++ b/index.html
@@ -2,16 +2,44 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <style>
+
+        header a{
+          color: white;
+          text-decoration: none;
+        }
+
+        nav {
+          float: left;
+          width: 10%;
+          height: 300px;
+          background: #0000FF;
+          padding: 20px;
+        }
+
+        nav ul {
+          list-style-type: none;
+          padding: 0;
+        }
+
+        nav ul li a{
+          color: white;
+          text-decoration: none;
+        }
+        </style>
     </head>
+
     <body>
-        <div>
-            Hello World!!
-        </div> 
-        <ol>    
-            <li>김경오</li>
-            <li>최현호</li>
-            <li>변지민</li>
-            <li>오택원</li>
-        </ol>
+      <header>
+        <h1><a style="position:absolute" href ="OHUB.com" > OHUB </a><h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href = "dummy_e-mail.com" > e-mail </a></li>
+          <li><a href = "dummy_coference.com" > 회의실 예약 </a></li>
+          <li><a href = "dummy_dailyAttendance.com" > 출근 현황 </a></li>
+          <li><a href = "dummy_Leadership.com " > 조직도 </a></li>
+        </ul>
+      </nav>
     </body>
 </html>
