--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <header>
-        <h1><a style="position:absolute" href ="OHUB.com" > OHUB </a><h1>
+        <h1><a id="logo" style="position:absolute" href ="OHUB.com" > OHUB </a><h1>
       </header>
       <nav>
         <ul>
