--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <div>
-            Hello World!!
-        </div> 
-        <ol>    
-            <li>김경오</li>
-            <li>최현호</li>
-            <li>변지민</li>
-            <li>오택원</li>
-        </ol>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="homeStyle.css">
+    <meta property="og:title" content="야 너두 코딩 할 수 있어">
+    <meta property="og:description" content="코딩을 처음하는 사람들이 웹사이트를 만들어봅니다. firebase hosting을 사용했습니다.">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+    <img id="homeImage" src="https://picsum.photos/1000/400" alt="main image">
+
+    <div id="topMenu">
+        <ul id="topMenuList">
+            <li class="topMenuItem">
+                공지사항
+            </li>
+            <li class="topMenuItem">
+                안 읽은 메일
+            </li>
+        </ul>
+        <button id="loginButton">
+            로그인하세요
+        </button>
+        <button id="profileImage" />
+    </div>
+    <div>
+        Hello World!!
+    </div>
+    <ol>
+        <li>김경오</li>
+        <li>최현호</li>
+        <li>변지민</li>
+        <li>오택원</li>
+    </ol>
+</body>
+
 </html>
