login porfile popup

--- a/index.html
+++ b/index.html
@@ -32,11 +32,21 @@
         <button id="loginButton">
             로그인하세요
         </button>
-        <button id="profileImage" />
+        <div id="dropdown">
+            <button id="profileImage">
+                <ul id="profileImage_content">
+                    <li>김경오 사원</li>
+                    <li>마이페이지</li>
+                    <li>로그아웃</li>
+                </ul>
+            </button>
+        </div>
+
+
     </div>
 
     <nav>
-        <ul>
+        <ul id="sidebar">
             <li><a href="dummy_e-mail.com"> e-mail </a></li>
             <li><a href="dummy_coference.com"> 회의실 예약 </a></li>
             <li><a href="dummy_dailyAttendance.com"> 출근 현황 </a></li>
