--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <button id="loginButton">
             로그인하세요
         </button>
+
         <div id="dropdown">
-            <button id="profileImage">
-                <ul id="profileImage_content">
+            <button id="profileImage" onclick="openFunction()">
+                <ul id="profileImage_content" class="dropdown_content">
                     <li>김경오 사원</li>
                     <li>마이페이지</li>
                     <li>로그아웃</li>
@@ -44,6 +45,23 @@
 
 
     </div>
+    <script>
+        function openFunction() {
+            document.getElementById("profileImage_content").classList.toggle("show");
+        }
+        window.onclick = function (event) {
+            if (!event.target.matches('#profileImage')) {
+                var dropdowns = document.getElementsByClassName("dropdown_content");
+                for (var i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
+
 
     <nav>
         <ul id="sidebar">
