--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,6 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-            <a id="logo" style="position:absolute" href="OHUB.com"> OHUB </a>
-        </h1>
-    </header>
     <img id="homeImage" src="https://picsum.photos/1000/400" alt="main image">
 
     <div id="topMenu">
@@ -47,10 +42,11 @@
 
     <nav>
         <ul id="sidebar">
-            <li><a href="dummy_e-mail.com"> e-mail </a></li>
-            <li><a href="dummy_coference.com"> 회의실 예약 </a></li>
-            <li><a href="dummy_dailyAttendance.com"> 출근 현황 </a></li>
-            <li><a href="dummy_Leadership.com "> 조직도 </a></li>
+            <h1><a id="logo" href="#"> OHUB </a></h1>
+            <li><a href="#"> e-mail </a></li>
+            <li><a href="#"> 회의실 예약 </a></li>
+            <li><a href="#"> 출근 현황 </a></li>
+            <li><a href="#"> 조직도 </a></li>
         </ul>
     </nav>
 
