프로필 화면 디자인 반영
현재 api 연동은 추가하지 않았으며 기본적인 정보를 정적으로 보여주도록 되어 있음.

다른 코드들을 참조 후 파일 구조 정리가 한번 필요해보임.

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
             <button id="profileImage" onclick="toggleProfileImage()">
                 <ul id="profileImage_content" class="dropdown_content">
                     <li>김경오 사원</li>
-                    <li>마이페이지</li>
+                    <li onclick="showUserProfilePage()">마이페이지</li>
                     <li>로그아웃</li>
                 </ul>
             </button>
