--- a/src/notice.html
+++ b/src/notice.html
@@ -2,12 +2,15 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="noticeStyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="index.js"></script>
     <meta charset="UTF-8">
 </head>
 
 <body>
-    <p>공지사항</p>
-    <p>공지사항 목록을 조회 할 수 없습니다. </p>
+    <p id="noticeTitle">사내 공지사항을 확인하세요</p>
+    <div id="noticeList">현재 등록된 공지사항이 없습니다.</div>
 </body>
 
 </html>
