--- a/src/user_profile.html
+++ b/src/user_profile.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="index.js"></script>
-    <script src="user_profile.js"></script>
+    <script type="module" src="user_profile.js"></script>
 </head>
 
 <body>
