--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div id="topMenu">
         <ul id="topMenuList">
             <li class="topMenuItem" onclick="showNoticePage()">
-                공지사항 
+                공지사항 도커로 업데이트 !
             </li>
             <li class="topMenuItem" onclick="showUnreadMailsPage()">
                 안 읽은 메일
