--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 공지사항 도커로 업데이트 !
             </li>
             <li class="topMenuItem" onclick="showUnreadMailsPage()">
-                안 읽은 메일
+                안 읽은 메일 도커로 업데이트 !
             </li>
         </ul>
         <button id="loginButton">
