--- a/src/notice.html
+++ b/src/notice.html
@@ -8,35 +8,32 @@
 	<meta charset="UTF-8">
 	<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 	<link rel="stylesheet" href="notice.css" type="text/css">
+	<script type="module" src="./notice/notice.js"> 
+
+	</script>
+
 </head>
-<script type="text/javascript">
-	$(function () {
-		var s = "";
-		$.ajax({
-			type: "get",
-			url: "d.json",
-			success: function (data) {
-				$.each(data, function (i, elt) {
-					s += "<div class='container'>";
-					s += "<span class='check'>미확인</span>";
-					s += "<ul class='lili'>";
-					s += "<li class='title'>" + elt.title + "</li>";
-					s += "<li class='date'>" + elt.day + "</li>";
-					s += "</ul></div>";
-				});
-				$("#show").html(s);
 
-				$(".container").on("click", function () {
-					$(this).css("background", "gray");
-					$(this).find(".check").text("확인");
-				});
-			}
-		});
-	});
-</script>
-
+<!-- <script>
+	fetch("http://13.125.35.33:8080/notices", {
+		method:"get",	//put,delete, get은 디폴트 
+		headers: {
+		// "Content-Type": "application/json",
+		// "credentials": "include"
+		}
+	}).then((response) => {
+		return response.json();
+	}).then(result => {
+		console.log(result);
+		console.log(result.response.title);
+		console.log(result.response.content);
+		array.forEach( (item,index,noticeList) => {
+			console.log(item,index);
+		})
+	})
+</script> -->
 <body>
-	<div id="show"></div>
+	<div id="noticeShow"></div>
 </body>
 
 </html>
