로그인 관련 추가 기능
* 비밀번호 암호화에 필요한 해싱 모듈 추가
* 로그인 시 로딩 progress 가 표시될 수 있도록 추가
* 일반적인 http에러가 fetch 에서 에러로 처리되도록 변경. fetch는 400, 500 등을 throw 하지 않는것을 처음 알았음. https://www.tjvantoll.com/2015/09/13/fetch-and-errors/

따라서 별도의 ok 체크를 해서 ok가 아닌 경우 exception을 던지도로 수정.

* 로그인, 가입 관련 메소드 추가

--- a/src/index.html
+++ b/src/index.html
@@ -8,64 +8,67 @@
     <meta property="og:description" content="코딩을 처음하는 사람들이 웹사이트를 만들어봅니다. firebase hosting을 사용했습니다.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 
 <body>
-<img id="homeImage" src="https://picsum.photos/1000/400" alt="main image">
+    <img id="homeImage" src="https://picsum.photos/1000/400" alt="main image">
 
-<div id="topMenu">
-    <ul id="topMenuList">
-        <li class="topMenuItem" onclick="showNoticePage()">
-            공지사항
-        </li>
-        <li class="topMenuItem" onclick="showUnreadMailsPage()">
-            안 읽은 메일
-        </li>
-    </ul>
-    <button id="loginButton">
-        로그인하세요
-    </button>
+    <div id="topMenu">
+        <ul id="topMenuList">
+            <li class="topMenuItem" onclick="showNoticePage()">
+                공지사항
+            </li>
+            <li class="topMenuItem" onclick="showUnreadMailsPage()">
+                안 읽은 메일
+            </li>
+        </ul>
+        <button id="loginButton">
+            로그인하세요
+        </button>
 
-    <div id="dropdown">
-        <button id="profileImage" onclick="toggleProfileImage()">
+        <div id="dropdown">
+            <button id="profileImage" onclick="toggleProfileImage()">
             <ul id="profileImage_content" class="dropdown_content">
                 <li>김경오 사원</li>
                 <li onclick="showUserProfilePage()">마이페이지</li>
                 <li>로그아웃</li>
             </ul>
         </button>
+        </div>
+
     </div>
 
-</div>
+    <nav>
+        <ul id="sidebar">
+            <h1><a id="logo" href="#"> OHUB </a></h1>
+            <li><a href="#"> e-mail </a></li>
+            <li><a href="#"> 회의실 예약 </a></li>
+            <li><a href="#"> 출근 현황 </a></li>
+            <li><a href="#"> 조직도 </a></li>
+        </ul>
+    </nav>
 
-<nav>
-    <ul id="sidebar">
-        <h1><a id="logo" href="#"> OHUB </a></h1>
-        <li><a href="#"> e-mail </a></li>
-        <li><a href="#"> 회의실 예약 </a></li>
-        <li><a href="#"> 출근 현황 </a></li>
-        <li><a href="#"> 조직도 </a></li>
-    </ul>
-</nav>
+    <div id="contentContainer">
 
-<div id="contentContainer">
-
-</div>
-
-<div id="loginModal">
-    <p>
-        환영합니다.
-    </p>
-    <div id="loginFormContainer">
-        <form id="loginForm">
-            <input id="emailInput" type="text" placeholder="이메일"/>
-            <input id="passwordInput" type="text" placeholder="비밀번호"/>
-        </form>
     </div>
-    <button id="cancelLoginButton">닫기</button>
-    <button id="requestLoginButton">확인</button>
-</div>
+
+    <div id="loginModal">
+        <p>
+            환영합니다.
+        </p>
+        <div id="loginFormContainer">
+            <form id="loginForm">
+                <input id="emailInput" type="text" placeholder="이메일" />
+                <input id="passwordInput" type="text" placeholder="비밀번호" />
+            </form>
+        </div>
+        <button id="registerButton">회원가입</button>
+        <button id="cancelLoginButton">취소</button>
+        <button id="requestLoginButton">로그인</button>
+        <div id="loginModalProgress"></div>
+    </div>
+
 </body>
 
 </html>
